Updated DTO, read.me and open api docs
